GraphParser.py
# Generated from Graph.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO # type: ignore


class GraphParser ( Parser ):

    grammarFileName = "Graph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'graph'", "'{'", "'}'", "'types'", "'vertex'", 
                     "'extends'", "';'", "'edge'", "'('", "','", "')'", 
                     "'directed'", "'undirected'", "'['", "'..'", "'*'", 
                     "']'", "'attributes'", "':'", "'required'", "'optional'", 
                     "'='", "'vertices'", "'edges'", "'->'", "'true'", "'false'", 
                     "'int'", "'float'", "'string'", "'bool'", "'date'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT", "FLOAT", "STRING", "DATE", 
                      "COMMENT", "WS" ]

    RULE_program = 0
    RULE_graph = 1
    RULE_type_section = 2
    RULE_vertex_type_decl = 3
    RULE_edge_type_decl = 4
    RULE_cardinality = 5
    RULE_attribute_block = 6
    RULE_attribute_decl = 7
    RULE_vertex_section = 8
    RULE_vertex_instance = 9
    RULE_edge_section = 10
    RULE_edge_instance = 11
    RULE_attribute_assign_block = 12
    RULE_attribute_assignment = 13
    RULE_value = 14
    RULE_type = 15

    ruleNames =  [ "program", "graph", "type_section", "vertex_type_decl", 
                   "edge_type_decl", "cardinality", "attribute_block", "attribute_decl", 
                   "vertex_section", "vertex_instance", "edge_section", 
                   "edge_instance", "attribute_assign_block", "attribute_assignment", 
                   "value", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    ID=33
    INT=34
    FLOAT=35
    STRING=36
    DATE=37
    COMMENT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def graph(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.GraphContext)
            else:
                return self.getTypedRuleContext(GraphParser.GraphContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GraphParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.graph()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GraphParser.ID, 0)

        def type_section(self):
            return self.getTypedRuleContext(GraphParser.Type_sectionContext,0)


        def vertex_section(self):
            return self.getTypedRuleContext(GraphParser.Vertex_sectionContext,0)


        def edge_section(self):
            return self.getTypedRuleContext(GraphParser.Edge_sectionContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_graph

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph" ):
                listener.enterGraph(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph" ):
                listener.exitGraph(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraph" ):
                return visitor.visitGraph(self)
            else:
                return visitor.visitChildren(self)




    def graph(self):

        localctx = GraphParser.GraphContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_graph)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(GraphParser.T__0)
            self.state = 38
            self.match(GraphParser.ID)
            self.state = 39
            self.match(GraphParser.T__1)
            self.state = 40
            self.type_section()
            self.state = 41
            self.vertex_section()
            self.state = 42
            self.edge_section()
            self.state = 43
            self.match(GraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex_type_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.Vertex_type_declContext)
            else:
                return self.getTypedRuleContext(GraphParser.Vertex_type_declContext,i)


        def edge_type_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.Edge_type_declContext)
            else:
                return self.getTypedRuleContext(GraphParser.Edge_type_declContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_type_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_section" ):
                listener.enterType_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_section" ):
                listener.exitType_section(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_section" ):
                return visitor.visitType_section(self)
            else:
                return visitor.visitChildren(self)




    def type_section(self):

        localctx = GraphParser.Type_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_section)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(GraphParser.T__3)
            self.state = 46
            self.match(GraphParser.T__1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==8:
                self.state = 49
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [5]:
                    self.state = 47
                    self.vertex_type_decl()
                    pass
                elif token in [8]:
                    self.state = 48
                    self.edge_type_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(GraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vertex_type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.ID)
            else:
                return self.getToken(GraphParser.ID, i)

        def cardinality(self):
            return self.getTypedRuleContext(GraphParser.CardinalityContext,0)


        def attribute_block(self):
            return self.getTypedRuleContext(GraphParser.Attribute_blockContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_vertex_type_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertex_type_decl" ):
                listener.enterVertex_type_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertex_type_decl" ):
                listener.exitVertex_type_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertex_type_decl" ):
                return visitor.visitVertex_type_decl(self)
            else:
                return visitor.visitChildren(self)




    def vertex_type_decl(self):

        localctx = GraphParser.Vertex_type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vertex_type_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(GraphParser.T__4)
            self.state = 57
            self.match(GraphParser.ID)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 58
                self.match(GraphParser.T__5)
                self.state = 59
                self.match(GraphParser.ID)


            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 62
                self.cardinality()


            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 65
                self.attribute_block()


            self.state = 68
            self.match(GraphParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.ID)
            else:
                return self.getToken(GraphParser.ID, i)

        def cardinality(self):
            return self.getTypedRuleContext(GraphParser.CardinalityContext,0)


        def attribute_block(self):
            return self.getTypedRuleContext(GraphParser.Attribute_blockContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_edge_type_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_type_decl" ):
                listener.enterEdge_type_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_type_decl" ):
                listener.exitEdge_type_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge_type_decl" ):
                return visitor.visitEdge_type_decl(self)
            else:
                return visitor.visitChildren(self)




    def edge_type_decl(self):

        localctx = GraphParser.Edge_type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_edge_type_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(GraphParser.T__7)
            self.state = 71
            self.match(GraphParser.ID)
            self.state = 72
            self.match(GraphParser.T__8)
            self.state = 73
            self.match(GraphParser.ID)
            self.state = 74
            self.match(GraphParser.T__9)
            self.state = 75
            self.match(GraphParser.ID)
            self.state = 76
            self.match(GraphParser.T__10)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12 or _la==13:
                self.state = 77
                _la = self._input.LA(1)
                if not(_la==12 or _la==13):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 80
                self.cardinality()


            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 83
                self.attribute_block()


            self.state = 86
            self.match(GraphParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CardinalityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.INT)
            else:
                return self.getToken(GraphParser.INT, i)

        def getRuleIndex(self):
            return GraphParser.RULE_cardinality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCardinality" ):
                listener.enterCardinality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCardinality" ):
                listener.exitCardinality(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardinality" ):
                return visitor.visitCardinality(self)
            else:
                return visitor.visitChildren(self)




    def cardinality(self):

        localctx = GraphParser.CardinalityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cardinality)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(GraphParser.T__13)
            self.state = 89
            self.match(GraphParser.INT)
            self.state = 90
            self.match(GraphParser.T__14)
            self.state = 91
            _la = self._input.LA(1)
            if not(_la==16 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 92
            self.match(GraphParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.Attribute_declContext)
            else:
                return self.getTypedRuleContext(GraphParser.Attribute_declContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_attribute_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_block" ):
                listener.enterAttribute_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_block" ):
                listener.exitAttribute_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_block" ):
                return visitor.visitAttribute_block(self)
            else:
                return visitor.visitChildren(self)




    def attribute_block(self):

        localctx = GraphParser.Attribute_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(GraphParser.T__17)
            self.state = 95
            self.match(GraphParser.T__1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 96
                self.attribute_decl()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(GraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GraphParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(GraphParser.TypeContext,0)


        def value(self):
            return self.getTypedRuleContext(GraphParser.ValueContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_attribute_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_decl" ):
                listener.enterAttribute_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_decl" ):
                listener.exitAttribute_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_decl" ):
                return visitor.visitAttribute_decl(self)
            else:
                return visitor.visitChildren(self)




    def attribute_decl(self):

        localctx = GraphParser.Attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(GraphParser.ID)
            self.state = 105
            self.match(GraphParser.T__18)
            self.state = 106
            self.type_()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20 or _la==21:
                self.state = 107
                _la = self._input.LA(1)
                if not(_la==20 or _la==21):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 110
                self.match(GraphParser.T__21)
                self.state = 111
                self.value()


            self.state = 114
            self.match(GraphParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vertex_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex_instance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.Vertex_instanceContext)
            else:
                return self.getTypedRuleContext(GraphParser.Vertex_instanceContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_vertex_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertex_section" ):
                listener.enterVertex_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertex_section" ):
                listener.exitVertex_section(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertex_section" ):
                return visitor.visitVertex_section(self)
            else:
                return visitor.visitChildren(self)




    def vertex_section(self):

        localctx = GraphParser.Vertex_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vertex_section)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(GraphParser.T__22)
            self.state = 117
            self.match(GraphParser.T__1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 118
                self.vertex_instance()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(GraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vertex_instanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.ID)
            else:
                return self.getToken(GraphParser.ID, i)

        def attribute_assign_block(self):
            return self.getTypedRuleContext(GraphParser.Attribute_assign_blockContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_vertex_instance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVertex_instance" ):
                listener.enterVertex_instance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVertex_instance" ):
                listener.exitVertex_instance(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertex_instance" ):
                return visitor.visitVertex_instance(self)
            else:
                return visitor.visitChildren(self)




    def vertex_instance(self):

        localctx = GraphParser.Vertex_instanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vertex_instance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(GraphParser.ID)
            self.state = 127
            self.match(GraphParser.T__18)
            self.state = 128
            self.match(GraphParser.ID)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 129
                self.attribute_assign_block()


            self.state = 132
            self.match(GraphParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edge_instance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.Edge_instanceContext)
            else:
                return self.getTypedRuleContext(GraphParser.Edge_instanceContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_edge_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_section" ):
                listener.enterEdge_section(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_section" ):
                listener.exitEdge_section(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge_section" ):
                return visitor.visitEdge_section(self)
            else:
                return visitor.visitChildren(self)




    def edge_section(self):

        localctx = GraphParser.Edge_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_edge_section)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(GraphParser.T__23)
            self.state = 135
            self.match(GraphParser.T__1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 136
                self.edge_instance()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(GraphParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_instanceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GraphParser.ID)
            else:
                return self.getToken(GraphParser.ID, i)

        def attribute_assign_block(self):
            return self.getTypedRuleContext(GraphParser.Attribute_assign_blockContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_edge_instance

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_instance" ):
                listener.enterEdge_instance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_instance" ):
                listener.exitEdge_instance(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEdge_instance" ):
                return visitor.visitEdge_instance(self)
            else:
                return visitor.visitChildren(self)




    def edge_instance(self):

        localctx = GraphParser.Edge_instanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_edge_instance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(GraphParser.ID)
            self.state = 145
            self.match(GraphParser.T__18)
            self.state = 146
            self.match(GraphParser.ID)
            self.state = 147
            self.match(GraphParser.T__8)
            self.state = 148
            self.match(GraphParser.ID)
            self.state = 149
            self.match(GraphParser.T__24)
            self.state = 150
            self.match(GraphParser.ID)
            self.state = 151
            self.match(GraphParser.T__10)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 152
                self.attribute_assign_block()


            self.state = 155
            self.match(GraphParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_assign_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphParser.Attribute_assignmentContext)
            else:
                return self.getTypedRuleContext(GraphParser.Attribute_assignmentContext,i)


        def getRuleIndex(self):
            return GraphParser.RULE_attribute_assign_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_assign_block" ):
                listener.enterAttribute_assign_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_assign_block" ):
                listener.exitAttribute_assign_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_assign_block" ):
                return visitor.visitAttribute_assign_block(self)
            else:
                return visitor.visitChildren(self)




    def attribute_assign_block(self):

        localctx = GraphParser.Attribute_assign_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_attribute_assign_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(GraphParser.T__13)
            self.state = 158
            self.attribute_assignment()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 159
                self.match(GraphParser.T__9)
                self.state = 160
                self.attribute_assignment()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(GraphParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GraphParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(GraphParser.ValueContext,0)


        def getRuleIndex(self):
            return GraphParser.RULE_attribute_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_assignment" ):
                listener.enterAttribute_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_assignment" ):
                listener.exitAttribute_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_assignment" ):
                return visitor.visitAttribute_assignment(self)
            else:
                return visitor.visitChildren(self)




    def attribute_assignment(self):

        localctx = GraphParser.Attribute_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_attribute_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(GraphParser.ID)
            self.state = 169
            self.match(GraphParser.T__21)
            self.state = 170
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GraphParser.INT, 0)

        def FLOAT(self):
            return self.getToken(GraphParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(GraphParser.STRING, 0)

        def DATE(self):
            return self.getToken(GraphParser.DATE, 0)

        def getRuleIndex(self):
            return GraphParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = GraphParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 257899364352) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

